# GalacticView-agent

./: .gitignore  README.md  agents.py  cli.py  main.py  pyproject.toml  response_structure.py  tools.py
.github/workflows/: workflow.yml
galacticview_bot/: __init__.py  agents.py  cli.py  model.py  response_structure.py  search.py  system_messages.py  tools.py
server/: serve.py  service.py
server/dto/: __init__.py  chat_type_in.py  chat_type_out.py
