[project]
name = "galacticview-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Levente Daroczi",email = "daroczilevente2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "langchain (>=1.1.0,<2.0.0)",
    "langchain-ollama (>=1.0.0,<2.0.0)",
    "langchain-chroma (>=1.0.0,<2.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "langgraph (>=1.0.3,<2.0.0)",
    "ddgs (>=9.9.1,<10.0.0)",
    "duckduckgo-search (>=8.1.1,<9.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
